tests/NormalTests/paczka1/small_fuzzy/40073828.err
Error in line 1: 4ebPMiO S117 71,7
Error in line 2: kb5Z S117 85,9
Error in line 4: kb5Z A713 64,9
Error in line 6: kb5Z S998 0,5
Error in line 7: kb5Z A713 96,1
